Source/WebCore/editing/FrameSelection.h
@@ -134,6 +134,7 @@ public:
 
     Element* rootEditableElement() const { return m_selection.rootEditableElement(); }
     Element* rootEditableElementOrDocumentElement() const;
+    Node* rootEditableElementOrTreeScopeRootNode() const;
     Element* rootEditableElementRespectingShadowTree() const;
 
     bool rendererIsEditable() const { return m_selection.rendererIsEditable(); }
